fix: overflow-x

--- a/media/main.css
+++ b/media/main.css
@@ -79,8 +79,9 @@ a {
   border-radius: 3px;
 }
 
-.response .code {
-  overflow-x: scroll;
+.response .code,
+.response .text {
+  overflow-x: auto;
 }
 
 .response > .button {
